ios overflow error fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,10 @@
   scrollbar-width: none;
 }
 
-html, body {
+html, body, main {
   overflow-x: hidden;
+  width: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
